--- a/src/App/View/Admin/Auth/login.html
+++ b/src/App/View/Admin/Auth/login.html
@@ -20,7 +20,7 @@
     <body class="hold-transition login-page">
         <div class="login-box">
             <div class="login-logo">
-                <a href="#">Admin<b>ERe</b></a>
+                <a href="#">Cms<b>ERe</b></a>
             </div>
             <div class="login-box-body">
                 <div class="center">
