--- a/src/App/View/Admin/Slides/add.html
+++ b/src/App/View/Admin/Slides/add.html
@@ -2,7 +2,7 @@
 {% block header %}
     {{ parent() }}
     <!-- Begin CSS -->
-    <link type="text/css" rel="stylesheet" href="/assets/vendor/fileinput/fileinput.css">
+    <link type="text/css" rel="stylesheet" href="/assets/vendor/fileinput/fileinput.min.css">
     <link type="text/css" rel="stylesheet" href="/assets/vendor/cropper/cropper.min.css">
     <!-- End CSS -->
 {% endblock %}
@@ -80,7 +80,7 @@
 {% block js_footer %}
     {{ parent() }}
     <!-- Begin JS -->
-    <script type="text/javascript" src="/assets/vendor/fileinput/fileinput.js"></script>
+    <script type="text/javascript" src="/assets/vendor/fileinput/fileinput.min.js"></script>
     <script type="text/javascript" src="/assets/vendor/cropper/cropper.min.js"></script>
     <!-- End JS -->
 {% endblock %}
