--- a/src/App/View/Admin/Index/dashboard.html
+++ b/src/App/View/Admin/Index/dashboard.html
@@ -3,18 +3,20 @@
 {% block dashboard_active %}active{% endblock %}
 {% block content %}
     <div class="row">
-        <div class="col-lg-3 col-xs-6">
-            <div class="small-box bg-aqua">
-                <div class="inner">
-                    <h3>{{ users }}</h3>
-                    <p>Active Users</p>
+        {% if isAllowed("intranet.users.list") %}
+            <div class="col-lg-3 col-xs-6">
+                <div class="small-box bg-aqua">
+                    <div class="inner">
+                        <h3>{{ users }}</h3>
+                        <p>Active Users</p>
+                    </div>
+                    <div class="icon">
+                        <i class="fa fa-users"></i>
+                    </div>
+                    <a href="{{ urlFor("intranet.users.list", {page: 1}) }}" class="small-box-footer">More info <i class="fa fa-arrow-circle-right"></i></a>
                 </div>
-                <div class="icon">
-                    <i class="fa fa-users"></i>
-                </div>
-                <a href="{{ urlFor("intranet.users.list", {page: 1}) }}" class="small-box-footer">More info <i class="fa fa-arrow-circle-right"></i></a>
             </div>
-        </div>
+        {% endif %}
         <div class="col-lg-3 col-xs-6">
             <div class="small-box bg-green">
                 <div class="inner">
