--- a/src/App/View/Admin/Menus/index.html
+++ b/src/App/View/Admin/Menus/index.html
@@ -44,7 +44,7 @@
                     <div class="box-body">
                         {% include "Utils/_error_success.html" with {result: message} %}
                         <div class="row">
-                            <div class="col-xs-4">
+                            <div class="col-xs-5">
                                 <div class="box-group" id="accordion">
                                     <div class="panel box">
                                         <div class="box-header with-border">
@@ -54,13 +54,13 @@
                                         </div>
                                         <div id="collapsePages" class="panel-collapse collapse in">
                                             <div class="box-body">
-                                              Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3
-                                              wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum
-                                              eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla
-                                              assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred
-                                              nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer
-                                              farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus
-                                              labore sustainable VHS.
+                                                {% if pages is iterable and pages|length > 0 %}
+                                                    {% import "Utils/_pages_nestable.html" as page %}
+                                                    {{ page.printPages(pages) }}
+                                                {% endif %}
+                                                <div class="form-group">
+                                                    <button type="button" id="add-p" class="btn btn-primary">Add</button>
+                                                </div>
                                             </div>
                                         </div>
                                     </div>
@@ -72,13 +72,16 @@
                                         </div>
                                         <div id="collapseCategories" class="panel-collapse collapse">
                                             <div class="box-body">
-                                              Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3
-                                              wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum
-                                              eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla
-                                              assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred
-                                              nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer
-                                              farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus
-                                              labore sustainable VHS.
+                                                {% if categories is iterable and categories|length > 0 %}
+                                                    {% import "Utils/_categories_nestable.html" as recursive %}
+
+                                                    {% for category in categories %}
+                                                        {{ recursive.printCategory(category, 0) }}
+                                                    {% endfor %}
+                                                {% endif %}
+                                                <div class="form-group">
+                                                    <button type="button" id="add-c" class="btn btn-primary">Add</button>
+                                                </div>
                                             </div>
                                         </div>
                                     </div>
@@ -90,19 +93,23 @@
                                         </div>
                                         <div id="collapseLinks" class="panel-collapse collapse">
                                             <div class="box-body">
-                                              Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3
-                                              wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum
-                                              eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla
-                                              assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred
-                                              nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer
-                                              farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus
-                                              labore sustainable VHS.
+                                                <div class="form-group">
+                                                    <label for="cl-title">Title</label>
+                                                    <input type="text" name="cl-title" id="cl-title" class="form-control">
+                                                </div>
+                                                <div class="form-group">
+                                                    <label for="cl-url">Url address</label>
+                                                    <input type="text" name="cl-url" id="cl-url" class="form-control">
+                                                </div>
+                                                <div class="form-group">
+                                                    <button type="button" id="add-cl" class="btn btn-primary">Add</button>
+                                                </div>
                                             </div>
                                         </div>
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-xs-6 col-xs-offset-2">
+                            <div class="col-xs-6 col-xs-offset-1">
                                 <div class="dd" title="{% if name == "main-menu" %}4{% else %}1{% endif %}" id="nestable">
                                     {% if menu is iterable and menu|length > 0 %}
                                         {% import "Utils/_recursive_menu_nestable.html" as recursive %}
