--- a/src/App/View/Admin/Categories/list.html
+++ b/src/App/View/Admin/Categories/list.html
@@ -28,9 +28,7 @@
                                 </tr>
                             </thead>
                             <tbody>
-                                {% for category in categories %}
-                                    {{ recursive.recursiveCategory(category, 0) }}
-                                {% endfor %}
+                                {{ recursive.recursiveCategory(categories, 0) }}
                             </tbody>
                         </table>
                     {% else %}
