--- a/src/App/View/Admin/Menus/index.html
+++ b/src/App/View/Admin/Menus/index.html
@@ -38,7 +38,7 @@
                 <div class="box-header with-border">
                     <h3 class="box-title">Change selected menu</h3>
                 </div>
-                <form name="form-menus-edit" id="form-menus-edit" method="post" action="{{ [urlFor("intranet.menus"), queryStringParams()] | join("?") }}">
+                <form name="form-menus-edit" id="form-menus-edit" method="post" action="{{ [urlFor("intranet.menus"), name] | join("?name=") }}">
                     <input type="hidden" name="title" id="title" value="{{ name }}">
                     <textarea name="content" id="content" class="hidden-content">{{ menu }}</textarea>
                     <div class="box-body">
@@ -74,10 +74,7 @@
                                             <div class="box-body">
                                                 {% if categories is iterable and categories|length > 0 %}
                                                     {% import "Utils/_categories_nestable.html" as recursive %}
-
-                                                    {% for category in categories %}
-                                                        {{ recursive.printCategory(category, 0) }}
-                                                    {% endfor %}
+                                                    {{ recursive.printCategory(categories, 0) }}
                                                 {% endif %}
                                                 <div class="form-group">
                                                     <button type="button" id="add-c" class="btn btn-primary">Add</button>
@@ -111,9 +108,13 @@
                             </div>
                             <div class="col-xs-6 col-xs-offset-1">
                                 <div class="dd" title="{% if name == "main-menu" %}4{% else %}1{% endif %}" id="nestable">
-                                    {% if menu is iterable and menu|length > 0 %}
-                                        {% import "Utils/_recursive_menu_nestable.html" as recursive %}
-                                        {{ recursive.recursiveMenu(menu) }}
+                                    {% if menu %}
+                                        {{ renderNestableMenu(menu) | raw }}
+                                    {% else %}
+                                        <div class="alert alert-info">
+                                            <h4><i class="icon fa fa-info"></i> Notification</h4>
+                                            <p>No information was found! Add items to the menu form the left panels!</p>
+                                        </div>
                                     {% endif %}
                                 </div>
                             </div>
