--- a/src/App/View/Admin/Pages/edit.html
+++ b/src/App/View/Admin/Pages/edit.html
@@ -3,20 +3,20 @@
     {{ parent() }}
     <!-- Begin CSS -->
     <link type="text/css" rel="stylesheet" href="/assets/vendor/fileinput/fileinput.min.css">
-    <link type="text/css" rel="stylesheet" href="/assets/vendor/bootstrap-datepicker/bootstrap-datepicker.min.css">
     <!-- End CSS -->
 {% endblock %}
-{% block title %}Post Add{% endblock %}
-{% block posts_active %}active{% endblock %}
-{% block post_post_active %}active{% endblock %}
+{% block title %}Page Edit{% endblock %}
+{% block pages_active %}active{% endblock %}
 {% block content %}
     <div class="row">
         <div class="col-md-12">
             <div class="box box-primary">
                 <div class="box-header with-border">
-                    <h3 class="box-title">Add new post</h3>
+                    <h3 class="box-title">Edit page with title &ldquo;{{ page.title }}&rdquo;</h3>
                 </div>
-                <form name="form-post" id="form-post" method="post" enctype="multipart/form-data" action="{{ urlFor("intranet.posts.add") }}">
+                <form name="form-page" id="form-page" method="post" enctype="multipart/form-data" action="{{ urlFor("intranet.pages.edit", {id: page.id}) }}">
+                    <input type="hidden" name="id" value="{{ page.id }}">
+                    <input type="hidden" name="old-file" value="{{ page.featured_photo }}">
                     <div class="box-body">
                         {% include "Utils/_error_success.html" with {result: message} %}
                         <div class="row">
@@ -25,7 +25,7 @@
                                     <div class="col-xs-12">
                                         <div class="form-group">
                                             <label for="title">Title <span class="required">*</span></label>
-                                            <input type="text" name="title" class="form-control" id="title" value="{{ post.title }}">
+                                            <input type="text" name="title" class="form-control" id="title" value="{{ page.title }}">
                                         </div>
                                     </div>
                                 </div>
@@ -33,7 +33,7 @@
                                     <div class="col-xs-12">
                                         <div class="form-group">
                                             <label for="content">Content</label>
-                                            <textarea name="content" class="form-control" id="content" rows="20">{{ post.content }}</textarea>
+                                            <textarea name="content" class="form-control" id="content" rows="20">{{ page.content }}</textarea>
                                         </div>
                                     </div>
                                 </div>
@@ -42,11 +42,16 @@
                                         <div class="form-group">
                                             <label for="featured_photo">Featured photo</label>
                                             <br>
-                                            <div class="fileinput fileinput-new" data-provides="fileinput">
+                                            <div class="fileinput fileinput-{% if page.featured_photo %}exists{% else %}new{% endif %}" data-provides="fileinput">
                                                 <div class="fileinput-new thumbnail" style="max-width:700px; max-height:525px;">
                                                     <img alt="" src="http://www.placehold.it/700x525/EFEFEF/AAAAAA&text=no+image">
                                                 </div>
-                                                <div id="slide-area-select" class="fileinput-preview fileinput-exists thumbnail" style="max-width:700px; max-height:525px;"></div>
+                                                <div id="slide-area-select" class="fileinput-preview fileinput-exists thumbnail" style="max-width:700px; max-height:525px;">
+                                                    {% if page.featured_photo %}
+                                                        <img alt="" src="/uploads/{{ page.featured_photo }}">
+                                                        <input type="hidden" name="existing-image" value="1">
+                                                    {% endif %}
+                                                </div>
                                                 <div>
                                                     <span class="btn btn-default btn-file">
                                                         <span class="fileinput-new">Select image</span>
@@ -65,10 +70,11 @@
                                 <div class="row">
                                     <div class="col-xs-12">
                                         <div class="form-group">
-                                            <label for="status">Status <span class="required">*</span></label>
-                                            <select name="status" class="form-control" id="status">
-                                                <option value="PUBLISHED" {% if post.status == "PUBLISHED" %}selected{% endif %}>PUBLISHED</option>
-                                                <option value="DRAFT" {% if post.status == "DRAFT" %}selected{% endif %}>DRAFT</option>
+                                            <label for="template">Page template <span class="required">*</span></label>
+                                            <select name="template" class="form-control" id="template">
+                                                <option value="default" {% if page.template == "default" %}selected{% endif %}>Default Template</option>
+                                                <option value="contact" {% if page.template == "contact" %}selected{% endif %}>Contact Page</option>
+                                                <option value="sitemap" {% if page.template == "sitemap" %}selected{% endif %}>Sitemap Page</option>
                                             </select>
                                         </div>
                                     </div>
@@ -76,22 +82,11 @@
                                 <div class="row">
                                     <div class="col-xs-12">
                                         <div class="form-group">
-                                            <label for="categories">Post Category <span class="required">*</span></label>
-                                            {% if categories is iterable and categories|length > 0 %}
-                                                {% import "Utils/_categories_posts.html" as recursive %}
-                                                {{ recursive.printCategory(categories, 0, post.category) }}
-                                            {% endif %}
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="row">
-                                    <div class="col-xs-12">
-                                        <div class="form-group">
-                                            <label for="date">Date <span class="required">*</span></label>
-                                            <div class="input-group date">
-                                                <div class="input-group-addon"><i class="fa fa-calendar"></i></div>
-                                                <input type="text" name="date" class="form-control pull-right" id="date" data-provide="datepicker" data-date-format="dd.mm.yyyy" data-date-today-highlight="true" value="{{ post.date }}">
-                                            </div>
+                                            <label for="status">Status <span class="required">*</span></label>
+                                            <select name="status" class="form-control" id="status">
+                                                <option value="PUBLISHED" {% if page.status == "PUBLISHED" %}selected{% endif %}>PUBLISHED</option>
+                                                <option value="DRAFT" {% if page.status == "DRAFT" %}selected{% endif %}>DRAFT</option>
+                                            </select>
                                         </div>
                                     </div>
                                 </div>
@@ -100,7 +95,7 @@
                     </div>
                     <div class="box-footer">
                         <button type="submit" class="btn btn-primary"><i class="fa fa-floppy-o"></i> Save post</button>
-                        <a class="btn btn-default" href="{{ urlFor("intranet.posts.list", {page: 1}) }}"><i class="fa fa-level-up"></i> Go to posts</a>
+                        <a class="btn btn-default" href="{{ urlFor("intranet.pages.list", {page: 1}) }}"><i class="fa fa-level-up"></i> Go to posts</a>
                     </div>
                 </form>
             </div>
@@ -112,6 +107,5 @@
     <!-- Begin JS -->
     <script type="text/javascript" src="/assets/vendor/ckeditor/ckeditor.js"></script>
     <script type="text/javascript" src="/assets/vendor/fileinput/fileinput.min.js"></script>
-    <script type="text/javascript" src="/assets/vendor/bootstrap-datepicker/bootstrap-datepicker.min.js"></script>
     <!-- End JS -->
 {% endblock %}
