--- a/src/App/View/Admin/Settings/index.html
+++ b/src/App/View/Admin/Settings/index.html
@@ -24,6 +24,12 @@
                             </div>
                         </div>
                         <div class="form-group">
+                            <label for="cfe_key" class="col-sm-2 control-label">Contact form Email</label>
+                            <div class="col-sm-10">
+                                <input type="email" name="cfe" class="form-control" id="cfe_key" value="{{ getSetting("cfe") }}">
+                            </div>
+                        </div>
+                        <div class="form-group">
                             <label for="keywords_key" class="col-sm-2 control-label">Meta Keywords</label>
                             <div class="col-sm-10">
                                 <textarea name="keywords" class="form-control" id="keywords_key" rows="4">{{ getSetting("keywords") }}</textarea>
