--- a/src/App/View/Utils/_footer_menu.html
+++ b/src/App/View/Utils/_footer_menu.html
@@ -1,13 +1,7 @@
 {% spaceless %}
     <div id="footer-navigation">
         <ul>
-            <li><a href="/privacy-policy" title="Privacy Policy">Privacy Policy</a>&nbsp;·&nbsp;</li>
-            <li><a href="/legal-notice" title="Legal Notice">Legal Notice</a>&nbsp;·&nbsp;</li>
-            <li><a href="/sitemap" title="Sitemap">Sitemap</a></li>
-        </ul>
-        {#
-        <ul>
-            {% for key in getMenu('footer-menu') %}
+            {% for key in getMenu("footer-menu") %}
                 {% if not loop.last %}
                     <li><a href="{{ key.url }}" title="{{ key.title }}">{{ key.title }}</a>&nbsp;·&nbsp;</li>
                 {% else %}
@@ -15,6 +9,5 @@
                 {% endif %}
             {% endfor %}
         </ul>
-        #}
     </div>
 {% endspaceless %}
