--- a/src/App/View/Error/404.html
+++ b/src/App/View/Error/404.html
@@ -1,6 +1,7 @@
-{% extends 'front.html' %}
-
+{% extends "front.html" %}
 {% block content %}
-
-  not found
+    <div id="page-header">
+        <h1 id="page-title">Page Not Found</h1>
+    </div>
+    <p>It seems that the page you were looking for doesn't exist.</p>
 {% endblock %}
