--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -17,6 +17,7 @@ html, body {height: 100%; position: relative; box-sizing: border-box;}
 body {font-family: "Open Sans", sans-serif; font-size: 12px; line-height: 1.5em; color: #383838; background-color: #fff; background-image: none; background-repeat: repeat; background-position: left top; -webkit-font-smoothing: antialiased; -webkit-text-size-adjust: 100%;}
 a, a > * {text-decoration: none;}
 a, a:hover, a > * {color: #CA5728;}
+a, a > *, .button, .jcarousel-prev, .jcarousel-next {-webkit-transition: color 0.2s ease, background-color 0.2s ease, border 0.2s ease, opacity 0.2s ease-in-out; -moz-transition: color 0.2s ease, background-color 0.2s ease, border 0.2s ease, opacity 0.2s ease-in-out; -ms-transition: color 0.2s ease, background-color 0.2s ease, border 0.2s ease, opacity 0.2s ease-in-out; -o-transition: color 0.2s ease, background-color 0.2s ease, border 0.2s ease, opacity 0.2s ease-in-out; transition: color 0.2s ease, background-color 0.2s ease, border 0.2s ease, opacity 0.2s ease-in-out;}
 h1 {font-weight: 300; font-size: 2.333em; line-height: 1.214em;}
 h2 {font-weight: bold; font-size: 1.5em; line-height: 1.333em;}
 
@@ -91,7 +92,7 @@ input[type="submit"] {width: auto;}
 /* ---------------------------------------------------------------------- */
 /* Content
 /* ---------------------------------------------------------------------- */
-#content {}
+#content {padding-top: 15px;}
 p {margin-bottom: 20px;}
 .float-left {float: left;}
 .float-right {float: right;}
@@ -117,6 +118,24 @@ ul#search-results h2 {margin-bottom: 5px;}
 ul#search-results h2 a, ul#search-results h2 a strong {color: #383838;}
 ul#search-results h2 a:hover, ul#search-results h2 a:hover strong {color: #CA5728;}
 ul#search-results p {margin: 0;}
+
+.post-single .post {margin-bottom: 20px;}
+.post-single-image {overflow: hidden; position: relative; width: 100%; height: 240px; display: inline-block; background-color: #FFF; margin-bottom: 20px;}
+.post-single-image img {position: absolute; top: -20px; left: -55px;}
+.post-single-image > a .overlay {opacity: 0; filter: alpha(opacity=0); z-index: 0;}
+.post-single-image > a:hover .overlay {opacity: 1; filter: alpha(opacity=100); z-index: 1;}
+.overlay {display: block; background-color: rgba(0,0,0,0.3); background-repeat: no-repeat; background-position: center center; width: 100%; height: 100%; position: absolute; top: 0; left: 0;}
+.overlay.zoom {background-image: url("/assets/img/overlay-zoom.png");}
+.overlay.link {background-image: url("/assets/img/overlay-link.png");}
+.post-date {width: 40px; margin-right: 10px;}
+.post-date {width: 100px; margin-right: 20px; float: left; font-size: 0.97em; line-height: 1.272em; color: #888;}
+.post-date .title {font-weight: bold; font-style: normal;}
+.post-date .title {color: #383838;}
+.post-date > span {display: block;}
+.post-date > span {margin-bottom: 5px; font-style: italic;}
+.post-body {overflow: hidden;}
+h2.post-title {margin-bottom: 15px;}
+.post-title a {color: #383838;}
 
 /* ---------------------------------------------------------------------- */
 /* Pagination
