--- a/src/App/View/Utils/_recursive_category_select.html
+++ b/src/App/View/Utils/_recursive_category_select.html
@@ -9,6 +9,7 @@
             {% else %}
                 {{ recursive.recursiveCategory(category.children_recursive, loopDashes, selected, disableId) }}
             {% endif %}
-        {% endif %}
+        {% endif %}        
+        {% set loopDashes = 0 %}
     {% endfor %}
 {% endmacro %}
