--- a/src/App/View/Utils/_recursive_category_table.html
+++ b/src/App/View/Utils/_recursive_category_table.html
@@ -14,5 +14,6 @@
             {% import _self as recursive %}
             {{ recursive.recursiveCategory(category.children_recursive, loopDashes) }}
         {% endif %}
+        {% set loopDashes = 0 %}
     {% endfor %}
 {% endmacro %}
